<resources>
    <string name="app_name">Watcher</string>
    <string name="title_person">Person</string>
    <string name="title_info">Info</string>
    <string name="title_device">Device</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="all_device_item_image">picture of device</string>
    <string name="all_person_item_image">picture of person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_location">位置:</string>
    <string name="addDevice">to add a device</string>
    <string name="default_location">南门</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_adding_device">添加设备</string>
    <string name="title_delete_device">删除设备</string>
    <string name="title_adjust_device">修改设备信息</string>
    <string name="title_adjust_device_name">请输入新的设备信息</string>
    <string name="title_cancel">取消</string>
    <string name="title_confirm_adjust">确认修改</string>
    <string name="app_title">WATCHER</string>
    <string name="tip_login">首次登录将进行新用户注册</string>
    <string name="todo">TODO</string>
    <string name="title_remote_open">远程开锁</string>
    <string name="title_remote_watch">记录查看</string>
    <string name="str_delete_person">删除人员</string>
    <string name="str_adjust_person">修改人员信息</string>
    <string name="str_adjust_power">权限修改</string>
    <string name="str_adjust_person_name">输入新的人员名称</string>
    <string name="str_switch_ban">拦截项</string>
    <string name="str_switch_pass">通过项</string>
</resources>