<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_person">

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.watcher.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.watcher.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_device"
        android:name="com.example.watcher.ui.device.DeviceFragment"
        android:label="@string/title_device"
        tools:layout="@layout/fragment_device" />
</navigation>