<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.person.PersonDetailFragment">

    <data>

        <variable
            name="person"
            type="com.example.watcher.data.person.Person" />

        <variable
            name="viewModel"
            type="com.example.watcher.ui.device.DeviceDetailViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEB3B"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/person_item_image"
            app:imageFromUrl="@{person.imageUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/all_person_item_image"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{person.personName}"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_watch"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/title_remote_watch" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_gravity="center">
                <Button
                    android:id="@+id/button_adjust"
                    android:layout_width="150dp"
                    android:background="@drawable/shape"
                    android:layout_height="wrap_content"
                    android:text="@string/str_adjust_person" />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="150dp"
                    android:background="@drawable/shape"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/str_delete_person" />


        </LinearLayout>

    </LinearLayout>
</layout>
